--- a/docs/config.json
+++ b/docs/config.json
@@ -2,6 +2,13 @@
   "config": [
     {
       "type": "link",
+      "slug": "something-new",
+      "title": "Something New!",
+      "id": "qzut7f8ae",
+      "children": []
+    },
+    {
+      "type": "link",
       "key": "getting-started",
       "slug": "getting-started",
       "title": "Tina Alpaca",
